[#16] Implementing security for api-server
